<?xml version="1.0"?>
<package>
  <name>meca500_driver</name>
  <version>0.0.1</version>
  <description>The meca500_driver package</description>
  <author email="andreas.koepf@xamla.com">Andreas Köpf</author>
  <maintainer email="andreas.koepf@xamla.com">Andreas Köpf</maintainer>
  <license>MIT</license>
  <url type="website">http://www.xamla.com/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>meca500_msgs</run_depend>
  <export />
</package>
