<?xml version="1.0"?>
<package>
  <name>meca500_msgs</name>
  <version>0.0.0</version>
  <license>BSD</license>
  <description>The meca500_msgs package</description>
  <maintainer email="andreas.koepf@xamla.com">Andreas Koepf</maintainer>
  <author email="andreas.koepf@xamla.com">Andreas Koepf</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <export />
</package>